--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -362,6 +362,8 @@
     <!-- Translators: Title shown above a chat/contact list; the user selects the recipient of the messages he wants to forward to -->
     <string name="forward_to">Forward to…</string>
     <string name="share_multiple_attachments">Do you want to send %1$d files to the selected chat?\n\nThe files are sent unmodified in their original size, eg. images and videos are not recoded.</string>
+    <string name="share_single_attachment">Do you want to send this file to \"%1$s\"%2$s?\n\nThe file is sent unmodified in its original size, eg. image and video is not recoded.</string>
+    <string name="share_single_attachment_with_others">\ and other members of this chat</string>
     <string name="share_abort">Sharing aborted due to missing permissions.</string>
 
 
